Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/09 04:03:10 PM UTC</h3>
-<h4>as of 2023/05/09 04:03:10 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/09 05:03:10 PM UTC</h3>
+<h4>as of 2023/05/09 05:03:10 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>1253</td><td>187</td><td id="goalPercentage">87.01%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>1257</td><td>183</td><td id="goalPercentage">87.29%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -34,7 +34,7 @@
 <td id='cell_13' class='sum_cell ' onClick="showHourSummary(event, 'hour_13')">Hour 13: 1</td>
 <td id='cell_14' class='sum_cell complete' onClick="showHourSummary(event, 'hour_14')">Hour 14: 0</td>
 <td id='cell_15' class='sum_cell complete' onClick="showHourSummary(event, 'hour_15')">Hour 15: 0</td>
-<td id='cell_16' class='sum_cell ' onClick="showHourSummary(event, 'hour_16')">Hour 16: 4</td>
+<td id='cell_16' class='sum_cell complete' onClick="showHourSummary(event, 'hour_16')">Hour 16: 0</td>
 <td id='cell_17' class='sum_cell ' onClick="showHourSummary(event, 'hour_17')">Hour 17: 2</td></tr>
 <tr><td id='cell_18' class='sum_cell ' onClick="showHourSummary(event, 'hour_18')">Hour 18: 4</td>
 <td id='cell_19' class='sum_cell ' onClick="showHourSummary(event, 'hour_19')">Hour 19: 7</td>
@@ -338,10 +338,6 @@
 <tr><th>Time</th></tr>
 </thead>
 <tbody>
-<tr><td>16:30</tr></td>
-<tr><td>16:42</tr></td>
-<tr><td>16:43</tr></td>
-<tr><td>16:44</tr></td>
 </tbody>
 </table>
 </div>
@@ -776,8 +772,8 @@
 <tr><td>07:43 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18951">18951</a>      </td><td style="text-align: right;">   36.85</td></tr>
 <tr><td>07:44 </td><td>ejesbd          </td><td><a href="https://www.playstationtrophies.org/profiles/ejesbd/log?id=7437">7437</a>            </td><td style="text-align: right;">   69.86</td></tr>
 <tr><td>07:45 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18922">18922</a>      </td><td style="text-align: right;">   14.08</td></tr>
-<tr><td>07:46 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13468">13468</a></td><td style="text-align: right;">   95.73</td></tr>
-<tr><td>07:48 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13470">13470</a></td><td style="text-align: right;">   97.23</td></tr>
+<tr><td>07:46 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13468">13468</a></td><td style="text-align: right;">   95.78</td></tr>
+<tr><td>07:48 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13470">13470</a></td><td style="text-align: right;">   97.28</td></tr>
 <tr><td>07:50 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18923">18923</a>      </td><td style="text-align: right;">   21.63</td></tr>
 <tr><td>07:53 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18952">18952</a>      </td><td style="text-align: right;">   40.57</td></tr>
 <tr><td>07:54 </td><td>ejesbd          </td><td><a href="https://www.playstationtrophies.org/profiles/ejesbd/log?id=7405">7405</a>            </td><td style="text-align: right;">   67.99</td></tr>
@@ -995,12 +991,12 @@
 <tr><td>11:52 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45266">45266</a>     </td><td style="text-align: right;">   60.24</td></tr>
 <tr><td>11:53 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40317">40317</a>       </td><td style="text-align: right;">   59.28</td></tr>
 <tr><td>11:54 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40295">40295</a>       </td><td style="text-align: right;">   98.42</td></tr>
-<tr><td>11:55 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40297">40297</a>       </td><td style="text-align: right;">   95.62</td></tr>
+<tr><td>11:55 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40297">40297</a>       </td><td style="text-align: right;">   95.63</td></tr>
 <tr><td>11:56 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13446">13446</a></td><td style="text-align: right;">   29.4 </td></tr>
 <tr><td>11:57 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27564">27564</a>  </td><td style="text-align: right;">   15.46</td></tr>
 <tr><td>11:58 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31512">31512</a>         </td><td style="text-align: right;">   22.5 </td></tr>
 <tr><td>11:59 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18913">18913</a>      </td><td style="text-align: right;">   57.06</td></tr>
-<tr><td>12:01 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40304">40304</a>       </td><td style="text-align: right;">   96.78</td></tr>
+<tr><td>12:01 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40304">40304</a>       </td><td style="text-align: right;">   96.79</td></tr>
 <tr><td>12:02 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45226">45226</a>     </td><td style="text-align: right;">   65.93</td></tr>
 <tr><td>12:03 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31513">31513</a>         </td><td style="text-align: right;">   61.22</td></tr>
 <tr><td>12:04 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140014">140014</a>     </td><td style="text-align: right;">   80   </td></tr>
@@ -1070,7 +1066,7 @@
 <tr><td>13:16 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13441">13441</a></td><td style="text-align: right;">   50.48</td></tr>
 <tr><td>13:17 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45267">45267</a>     </td><td style="text-align: right;">   61.52</td></tr>
 <tr><td>13:18 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14943">14943</a>    </td><td style="text-align: right;">   72.12</td></tr>
-<tr><td>13:19 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13405">13405</a>       </td><td style="text-align: right;">   96.78</td></tr>
+<tr><td>13:19 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13405">13405</a>       </td><td style="text-align: right;">   96.79</td></tr>
 <tr><td>13:20 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18926">18926</a>      </td><td style="text-align: right;">   77.78</td></tr>
 <tr><td>13:21 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14871">14871</a>    </td><td style="text-align: right;">   77.26</td></tr>
 <tr><td>13:22 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14872">14872</a>    </td><td style="text-align: right;">   79.45</td></tr>
@@ -1261,10 +1257,11 @@
 <tr><td>16:27 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27547">27547</a>  </td><td style="text-align: right;">   99.08</td></tr>
 <tr><td>16:28 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45234">45234</a>     </td><td style="text-align: right;">   61.57</td></tr>
 <tr><td>16:29 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13070">13070</a>    </td><td style="text-align: right;">   56.12</td></tr>
+<tr><td>16:30 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140157">140157</a>     </td><td style="text-align: right;">   94   </td></tr>
 <tr><td>16:31 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45248">45248</a>     </td><td style="text-align: right;">   61.24</td></tr>
 <tr><td>16:32 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13278">13278</a>       </td><td style="text-align: right;">   95.13</td></tr>
-<tr><td>16:33 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139721">139721</a>     </td><td style="text-align: right;">   88.18</td></tr>
-<tr><td>16:34 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45225">45225</a>     </td><td style="text-align: right;">   68.15</td></tr>
+<tr><td>16:33 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140159">140159</a>     </td><td style="text-align: right;">  100   </td></tr>
+<tr><td>16:34 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140160">140160</a>     </td><td style="text-align: right;">  100   </td></tr>
 <tr><td>16:35 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18948">18948</a>      </td><td style="text-align: right;">   76.77</td></tr>
 <tr><td>16:36 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23660">23660</a>  </td><td style="text-align: right;">   21.32</td></tr>
 <tr><td>16:37 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14895">14895</a>    </td><td style="text-align: right;">   53.47</td></tr>
@@ -1272,6 +1269,9 @@
 <tr><td>16:39 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12826">12826</a>    </td><td style="text-align: right;">   13.02</td></tr>
 <tr><td>16:40 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3697">3697</a>          </td><td style="text-align: right;">   11.23</td></tr>
 <tr><td>16:41 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15825">15825</a>   </td><td style="text-align: right;">   29.22</td></tr>
+<tr><td>16:42 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140162">140162</a>     </td><td style="text-align: right;">   97.67</td></tr>
+<tr><td>16:43 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140163">140163</a>     </td><td style="text-align: right;">   97.67</td></tr>
+<tr><td>16:44 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140164">140164</a>     </td><td style="text-align: right;">   97.67</td></tr>
 <tr><td>16:45 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23661">23661</a>  </td><td style="text-align: right;">   17.24</td></tr>
 <tr><td>16:46 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15826">15826</a>   </td><td style="text-align: right;">   33.66</td></tr>
 <tr><td>16:47 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30547">30547</a>      </td><td style="text-align: right;">   72.18</td></tr>
@@ -1695,7 +1695,7 @@
 <tr><th>User            </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>Dino_Roar       </td><td style="text-align: right;">    135</td></tr>
+<tr><td>Dino_Roar       </td><td style="text-align: right;">    140</td></tr>
 <tr><td>Velvet_Bee      </td><td style="text-align: right;">    116</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">    110</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     67</td></tr>
@@ -1712,11 +1712,11 @@
 <tr><td>sum1_worsethan_u</td><td style="text-align: right;">     26</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">     24</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     24</td></tr>
-<tr><td>Da-Eastside     </td><td style="text-align: right;">     24</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     24</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">     24</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     23</td></tr>
 <tr><td>lion1325478     </td><td style="text-align: right;">     23</td></tr>
+<tr><td>Da-Eastside     </td><td style="text-align: right;">     23</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     22</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">     18</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     17</td></tr>
@@ -2297,12 +2297,12 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140124">140124</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       40</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140108">140108</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       41</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139865">139865</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       42</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140093">140093</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       43</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140159">140159</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       43</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140116">140116</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       44</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140120">140120</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       45</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140080">140080</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       46</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139277">139277</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       47</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139897">139897</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       48</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140160">140160</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       48</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139891">139891</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       49</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140034">140034</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       50</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=140038">140038</a></td><td style="text-align: right;">     100</td><td style="text-align: right;">       51</td></tr>
@@ -2603,11 +2603,11 @@
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40309">40309</a></td><td>94.90   </td><td style="text-align: right;">       09</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40309">40309</a></td><td>94.91   </td><td style="text-align: right;">       09</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40291">40291</a></td><td>29.25   </td><td style="text-align: right;">       10</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40318">40318</a></td><td>60.73   </td><td style="text-align: right;">       11</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40333">40333</a></td><td>54.75   </td><td style="text-align: right;">       12</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40297">40297</a></td><td>95.62   </td><td style="text-align: right;">       13</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40297">40297</a></td><td>95.63   </td><td style="text-align: right;">       13</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40312">40312</a></td><td>60.36   </td><td style="text-align: right;">       15</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
