Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="images\banner.png" alt="PST's Wait a Minute Event" title="PST's Wait a Minute Event">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/10 05:05:05 PM UTC</h3>
-<h4>as of 2023/05/10 05:05:05 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/10 06:00:02 PM UTC</h3>
+<h4>as of 2023/05/10 06:00:02 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>1278</td><td>162</td><td id="goalPercentage">88.75%</td></tr></tbody></table></div><br>
@@ -847,7 +847,7 @@
 <tr><td>09:43 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14981">14981</a>    </td><td>60.66 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>09:44 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139952">139952</a>     </td><td>93.42 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
 <tr><td>09:45 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139953">139953</a>     </td><td>93.42 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
-<tr><td>09:46 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13319">13319</a>       </td><td>77.79 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
+<tr><td>09:46 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13319">13319</a>       </td><td>77.78 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>09:47 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139954">139954</a>     </td><td>93.42 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
 <tr><td>09:48 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28233">28233</a>         </td><td>77.89 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>09:49 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139742">139742</a>     </td><td>96.77 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
@@ -1069,7 +1069,7 @@
 <tr><td>13:30 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18978">18978</a>      </td><td>10.91 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>13:31 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18979">18979</a>      </td><td>17.71 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>13:32 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12850">12850</a>    </td><td>23.83 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
-<tr><td>13:33 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139466">139466</a>     </td><td>98.59 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
+<tr><td>13:33 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31548">31548</a>         </td><td>61.98 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>13:34 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139467">139467</a>     </td><td>97.88 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
 <tr><td>13:35 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12851">12851</a>    </td><td>21.66 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>13:36 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23696">23696</a>  </td><td>91.95 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
@@ -1298,7 +1298,7 @@
 <tr><td>17:19 </td><td>Velvet_Bee      </td><td><a href="https://www.playstationtrophies.org/profiles/Velvet_Bee/log?id=23541">23541</a>      </td><td>35.00 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:20 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13327">13327</a>       </td><td>95.87 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>17:21 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23662">23662</a>  </td><td>16.80 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
-<tr><td>17:22 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17684">17684</a></td><td>66.67 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
+<tr><td>17:22 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13454">13454</a>       </td><td>48.52 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>17:23 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27572">27572</a>  </td><td>13.89 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:24 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30553">30553</a>      </td><td>20.36 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:25 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13097">13097</a>    </td><td>26.80 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
@@ -1331,7 +1331,7 @@
 <tr><td>17:52 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23683">23683</a>  </td><td>70.92 <img src='images\Silver.png' alt='Silver' title='Silver' />       </td></tr>
 <tr><td>17:53 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23657">23657</a>  </td><td>19.65 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:54 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12830">12830</a>    </td><td>18.22 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
-<tr><td>17:55 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12857">12857</a>      </td><td>54.03 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
+<tr><td>17:55 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31552">31552</a>         </td><td>39.84 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:56 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13072">13072</a>    </td><td>25.19 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>17:57 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13437">13437</a>       </td><td>95.60 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
 <tr><td>17:58 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27521">27521</a>  </td><td>66.70 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
@@ -1347,7 +1347,7 @@
 <tr><td>18:08 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13073">13073</a>    </td><td>29.87 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>18:09 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27523">27523</a>  </td><td>66.14 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>18:10 </td><td>SWEDISH_PIRATE  </td><td><a href="https://www.playstationtrophies.org/profiles/SWEDISH_PIRATE/log?id=27524">27524</a>  </td><td>64.03 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
-<tr><td>18:11 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13316">13316</a>       </td><td>79.24 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
+<tr><td>18:11 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13316">13316</a>       </td><td>79.25 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>18:12 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23686">23686</a>  </td><td>75.77 <img src='images\Gold.png' alt='Gold' title='Gold' />             </td></tr>
 <tr><td>18:13 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13447">13447</a>       </td><td>97.60 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
 <tr><td>18:14 </td><td>Xemik           </td><td><a href="https://www.playstationtrophies.org/profiles/Xemik/log?id=27223">27223</a>           </td><td>26.48 <img src='images\Bronze.png' alt='Bronze' title='Bronze' />       </td></tr>
@@ -1695,19 +1695,19 @@
 <tr><th>User            </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>Martz4040       </td><td style="text-align: right;">    115</td></tr>
+<tr><td>Martz4040       </td><td style="text-align: right;">    116</td></tr>
 <tr><td>Velvet_Bee      </td><td style="text-align: right;">    114</td></tr>
-<tr><td>Dino_Roar       </td><td style="text-align: right;">     90</td></tr>
+<tr><td>Dino_Roar       </td><td style="text-align: right;">     89</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     84</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     67</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     69</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     65</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     59</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     54</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     54</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     51</td></tr>
-<tr><td>wrestlefanatic77</td><td style="text-align: right;">     49</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">     49</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     49</td></tr>
+<tr><td>wrestlefanatic77</td><td style="text-align: right;">     48</td></tr>
 <tr><td>ejesbd          </td><td style="text-align: right;">     36</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     27</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     27</td></tr>
@@ -1722,9 +1722,9 @@
 <tr><td>diskdocx        </td><td style="text-align: right;">     20</td></tr>
 <tr><td>clayser         </td><td style="text-align: right;">     13</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">     12</td></tr>
-<tr><td>Lion_Squid      </td><td style="text-align: right;">     12</td></tr>
 <tr><td>VazzVegas       </td><td style="text-align: right;">     12</td></tr>
 <tr><td>Ryukori_        </td><td style="text-align: right;">     11</td></tr>
+<tr><td>Lion_Squid      </td><td style="text-align: right;">     11</td></tr>
 <tr><td>stgermain       </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Asher1985       </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Eticket109      </td><td style="text-align: right;">      4</td></tr>
@@ -2892,7 +2892,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13277">13277</a></td><td style="text-align: right;">   93.16</td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13283">13283</a></td><td style="text-align: right;">   94.82</td><td style="text-align: right;">       24</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13330">13330</a></td><td style="text-align: right;">   81.43</td><td style="text-align: right;">       25</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13431">13431</a></td><td style="text-align: right;">   88.37</td><td style="text-align: right;">       26</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13454">13454</a></td><td style="text-align: right;">   48.52</td><td style="text-align: right;">       26</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13318">13318</a></td><td style="text-align: right;">   82.55</td><td style="text-align: right;">       27</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13352">13352</a></td><td style="text-align: right;">   88.21</td><td style="text-align: right;">       28</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13243">13243</a></td><td style="text-align: right;">   95.01</td><td style="text-align: right;">       29</td></tr>
@@ -2905,9 +2905,9 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13300">13300</a></td><td style="text-align: right;">   93   </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13231">13231</a></td><td style="text-align: right;">   97.3 </td><td style="text-align: right;">       37</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13268">13268</a></td><td style="text-align: right;">   95.62</td><td style="text-align: right;">       38</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13315">13315</a></td><td style="text-align: right;">   82.3 </td><td style="text-align: right;">       39</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13319">13319</a></td><td style="text-align: right;">   77.79</td><td style="text-align: right;">       40</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13314">13314</a></td><td style="text-align: right;">   86.05</td><td style="text-align: right;">       41</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13315">13315</a></td><td style="text-align: right;">   82.31</td><td style="text-align: right;">       39</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13319">13319</a></td><td style="text-align: right;">   77.78</td><td style="text-align: right;">       40</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13314">13314</a></td><td style="text-align: right;">   86.06</td><td style="text-align: right;">       41</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13331">13331</a></td><td style="text-align: right;">   85.74</td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13324">13324</a></td><td style="text-align: right;">   92.6 </td><td style="text-align: right;">       43</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13351">13351</a></td><td style="text-align: right;">   88.33</td><td style="text-align: right;">       44</td></tr>
@@ -2921,8 +2921,8 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13253">13253</a></td><td style="text-align: right;">   94.43</td><td style="text-align: right;">       52</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13409">13409</a></td><td style="text-align: right;">   86.02</td><td style="text-align: right;">       53</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13265">13265</a></td><td style="text-align: right;">   95.53</td><td style="text-align: right;">       54</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13316">13316</a></td><td style="text-align: right;">   79.24</td><td style="text-align: right;">       55</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13317">13317</a></td><td style="text-align: right;">   84.36</td><td style="text-align: right;">       56</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13316">13316</a></td><td style="text-align: right;">   79.25</td><td style="text-align: right;">       55</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13317">13317</a></td><td style="text-align: right;">   84.37</td><td style="text-align: right;">       56</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13402">13402</a></td><td style="text-align: right;">   87.16</td><td style="text-align: right;">       57</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13287">13287</a></td><td style="text-align: right;">   94.68</td><td style="text-align: right;">       58</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13280">13280</a></td><td style="text-align: right;">   95   </td><td style="text-align: right;">       59</td></tr>
